<resources>
    <string name="app_name">ZaloChat</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="send_code_to_activate">Gửi mã kích hoạt</string>
    <string name="send_code_to_activate_fail">Gửi mã kích hoạt thất bại</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="name_register">Họ và tên</string>
    <string name="goto_login">Nếu bạn đã có tài khoản. Nhấn vào đây để đăng nhập</string>
    <string name="login_false">Đăng nhập thất bại</string>
    <string name="wrong_password">Sai mật khẩu</string>
    <string name="wrong_phone">Sai số điện thoại</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="user_inactive">Tài khoản chưa kích hoạt</string>
    <string name="nav_title_message">Tin nhắn</string>
    <string name="nav_title_phonebook">Danh bạ</string>
    <string name="nav_title_profile">Hồ sơ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>