<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@id/line1_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>
    <ImageView
        android:id="@+id/useLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/line1_horizontal"
        app:layout_constraintBottom_toTopOf="@id/line2_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/txtPhoneLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line2_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"/>
    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPhoneLogin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLogin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/login_button"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:onClick="onClickLogin"
        android:textColor="@color/black"
        android:shadowColor="@color/black"/>
    <TextView
        android:id="@+id/txt_send_mail_to_activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_code_to_activate"
        android:textColor="@color/black"
        android:onClick="onTextViewSendMailClick"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/line1_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/txt_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:onClick="onTextViewForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/line1_vertical"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>